--- a/src/components/Logo/style.scss
+++ b/src/components/Logo/style.scss
@@ -1,42 +1,49 @@
 @import '../../styles/scss/App.scss';
 
 .header-logo {
-    letter-spacing: 2px;
-    font-size: $xx;
     position: relative;
     display: inline-block;
     cursor: pointer;
-  
+
+    h3 {
+        letter-spacing: 2px;
+        font-size: $xx;
+        font-weight: 200;
+        transition: .4s;
+    }
+
     &:after {
-      content: "";
-      position: absolute;
-      width: 100%;
-      height: 0.1rem;
-      bottom: -0.5rem;
-      left: 0;
-      transition: transform 0.2s ease-in-out;
-      transform-origin: bottom center;
-      background: linear-gradient(to right, #28143f, #0083b0, #00b4db, #0083b0, #28143f, #0083b0, #00b4db, #0083b0, #28143f);
-      background-size: 200% 100%;
-      background-position: 0 0;
-      animation: gradient 8s linear infinite;
-      transform: scaleX(0);
-      border-radius: 100%;
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 0.1rem;
+        bottom: -0.5rem;
+        left: 0;
+        transition: transform 0.2s ease-in-out;
+        transform-origin: bottom center;
+        background: linear-gradient(to right, #28143f, #004b64, #00b4db, #004b64, #28143f, #004b64, #00b4db, #004b64, #28143f);
+        background-size: 200% 100%;
+        background-position: 0 0;
+        animation: gradient 8s linear infinite;
+        transform: scaleX(0);
+        border-radius: 100%;
     }
-  
+
     &:hover:after {
-      transform: scaleX(1);
+        transform: scaleX(1);
     }
-  
+
     @keyframes gradient {
         0% {
-          background-position-x: 0%;
+            background-position: 0% 0;
         }
-        50% {
-          background-position-x: 100%;
-        }
+
         100% {
-          background-position-x: 200%;
+            background-position: 0% 300%;
         }
     }
-  }
+
+    &:hover{
+        text-shadow: 0 0 10px #fff;
+    }
+}
