--- a/src/styles/scss/App.scss
+++ b/src/styles/scss/App.scss
@@ -1,5 +1,6 @@
 // ----- COLORS -----
-$primary: #5900ff;
+$primary: #00ccff;
+$secondary: #86c6fa;
 $dark-background-color: #37373f;
 $light-background-color: #e4fdff;
 $amoled: #000;
