--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,30 +1,93 @@
 @import '../../styles/scss/App.scss';
 
-.header{
-    background-color: $amoled;
-    border-radius: 0 0 60px 60px;
+.header {
+    background-color: transparent;
     height: 112px;
 
-    .header-content{
+    .header-content {
         display: flex;
         align-items: center;
         justify-content: space-around;
         height: 100%;
 
-        .header-nav{
-            ul{
+
+        .header-nav {
+            position: relative;
+            
+            width: 100%;
+
+            .nav-close {
+                position: absolute;
+                top: -10px;
+                right: -70px;
+                color: #fff;
+                font-size: 32px;
+                z-index: -1;
+                opacity: 0;
+                transition: .3s ease-in-out;
+                cursor: pointer;
+
+                @media screen and (max-width: 1160px) {
+                    &.cls_active {
+                        z-index: 6;
+                        opacity: 1;
+                    }
+                }
+            }
+
+            ul {
                 display: flex;
                 list-style: none;
+                transition: .4s ease all;
+                top: 0;
+                right: 0;
+                justify-content: space-evenly;
+                width: 100%;
+
+                @media screen and (max-width: 1160px) {
+                    position: fixed;
+                    flex-direction: column;
+                    justify-content: space-around;
+                    align-items: center;
+                    backdrop-filter: blur(20px);
+                    -webkit-backdrop-filter: blur(20px);
+                    transform: translate(0);
+                    height: 100vh;
+                    opacity: 0;
+                    transition: .3s ease all;
+                    z-index: -5;
+
+                    &.nav_active {
+                        opacity: 1;
+                        z-index: 5;
+                    }
+
+                    li {
+                        a {
+                            font-size: 18px;
+                        }
+                    }
+                }
 
                 li {
-                    padding: 0 24px;
                     position: relative;
-                    
-                    a{
+
+                    &.active {
+                        a {
+                            opacity: 1;
+                            text-shadow: 0 0 15px #ffffff;
+                        }
+                        &:after {
+                            transform: scaleX(1);
+                        }
+                    }
+
+                    a {
                         text-decoration: none;
                         font-weight: bolder;
                         color: $text-color-light;
                         text-transform: lowercase;
+                        opacity: .7;
                         transition: 0.2s ease-in-out;
                     }
 
@@ -37,22 +100,47 @@
                         left: 0;
                         transition: transform 0.2s ease-in-out;
                         transform-origin: bottom center;
-                        background: linear-gradient(to right, $primary, #8b25ff, $primary);
+                        background-color: #defff8;
                         transform: scaleX(0);
                         border-radius: 300px;
-                      }
+                    }
 
-                      &:hover{
-                        a{
-                            color: $primary;
-                            text-shadow: 0 0 15px #b87aff;
+                    &:hover {
+                        a {
+                            opacity: 1;
+                            text-shadow: 0 0 15px #defff8;
                         }
-                      }
-                    
-                      &:hover:after {
-                        transform: scaleX(.7);
-                      }
+                    }
+
+                    &:hover:after {
+                        transform: scaleX(1);
+                    }
                 }
+            }
+        }
+
+        .header-btn {
+            margin: 0 36px;
+
+            button {
+                background-color: unset;
+                border: unset;
+            }
+
+            .nav-btn {
+                cursor: pointer;
+                transition: .3s ease-in-out;
+                display: none;
+
+                @media screen and (max-width: 1160px) {
+                    display: block;
+                }
+
+                .hamburger-icon {
+                    font-size: 32px;
+                    color: #fff
+                }
+
             }
         }
     }
