--- a/src/pages/Contact/style.scss
+++ b/src/pages/Contact/style.scss
@@ -6,7 +6,7 @@
     align-items: center;
 
     .contact-content{
-        max-width: 712px;
+        max-width: 564px;
         padding: 32px;
         width: 100%;
         justify-content: center;
@@ -17,24 +17,108 @@
         align-items: center;
 
         .contact-title{
-            font-size: 14px;
+            font-size: 18px;
             color: $text-color-light;
             background-color: #444;
+            border-radius: 22px;
             margin-top: 16px;
             margin-bottom: -9px;
-            z-index: 10;
-            padding: 0 30px;
+            z-index: 2;
+            padding: 0 26px;
         }
 
         .contact-form{
-            border-top: 2px #000 solid;
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            border-top: 2px $text-color-dark solid;
             padding-top: 32px;
 
             .form-input{
                 display: flex;
-                justify-content: space-between;
+                justify-content: space-around;
+
+                div{
+                    display: flex;
+                    flex-direction: column;
+                    width: 45%;
+
+                    label{
+                        font-weight: bold;
+                        font-size: 14px;
+                        margin-left: 12px;
+                        margin-bottom: 6px;
+                    }
+                    
+                    input{
+                        border-radius: 14px;
+                        padding: 6px 14px;
+                        background-color: $text-color-light;
+                        border: unset;
+                    }
+                    input::placeholder{
+                        color: $dark-background-color;
+                    }
+                }
+            }
+            .messageContainer{
+                margin-top: 32px;
+                display: flex;
+                flex-direction: column;
+                label{
+                    margin-bottom: 6px;
+                    margin-left: 12px;
+                    font-weight: bold;
+                    font-size: 14px;
+                }
+    
+                textarea{
+                    border-radius: 14px;
+                    padding: 6px 14px;
+                    background-color: $text-color-light;
+                    border: unset;
+                }
             }
 
+            .sendBtn {
+                margin-top: 16px;
+                align-self: flex-end;
+                position: relative;
+                background-color: $light-background-color;
+                border: none;
+                border-radius: 14px;
+                padding: 12px 48px;
+                text-transform: uppercase;
+                font-size: 14px;
+                font-weight: bold;
+                color: $dark-background-color;
+                cursor: pointer;
+                transition: .4s ease-in-out;
+              
+                &::before {
+                  content: '';
+                  position: absolute;
+                  top: -4px;
+                  left: -4px;
+                  right: -4px;
+                  bottom: -4px;
+                  border-radius: 18px;
+                  box-shadow: 0 0 0 0 $dark-background-color;
+                  opacity: 0;
+                  transition: opacity .4s ease-in-out, box-shadow .4s ease-in-out;
+                }
+              
+                &:hover {
+                  background-color: $dark-background-color;
+                  color: $light-background-color;
+                  transform: scale(.97);
+              
+                  &::before {
+                    opacity: 1;
+                    box-shadow: 0 0 0 2px $light-background-color;
+                  }
+                }
+              }
         }
     }
 }
