:pencil: Feat: Adicionando validacoes nos inputs

--- a/src/styles/scss/App.scss
+++ b/src/styles/scss/App.scss
@@ -1,6 +1,7 @@
 // ----- COLORS -----
 $primary: #00ccff;
 $secondary: #86c6fa;
+$error: #fa8686;
 $dark-background-color: #37373f;
 $light-background-color: #e4fdff;
 $amoled: #000;
