--- a/src/pages/Contact/style.scss
+++ b/src/pages/Contact/style.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 0 32px;
 
     .contact-content{
         max-width: 564px;
@@ -38,6 +39,14 @@
                 display: flex;
                 justify-content: space-around;
 
+                @media screen and (max-width: 612px) {
+                    flex-direction: column;
+
+                    div{
+                        width: 100% !important;
+                    }
+                }
+
                 div{
                     display: flex;
                     flex-direction: column;
@@ -59,6 +68,15 @@
                     input::placeholder{
                         color: $dark-background-color;
                     }
+
+                    span{
+                        margin-top: 4px;
+                        margin-left: 8px;
+                        text-transform: lowercase;
+                        color: $error;
+                        font-size: 12px;
+                        font-weight: bold;
+                    }
                 }
             }
             .messageContainer{
@@ -77,6 +95,15 @@
                     padding: 6px 14px;
                     background-color: $text-color-light;
                     border: unset;
+                }
+
+                span{
+                    margin-top: 4px;
+                    margin-left: 8px;
+                    text-transform: lowercase;
+                    color: $error;
+                    font-size: 12px;
+                    font-weight: bold;
                 }
             }
 
