--- a/src/components/FormationCard/style.scss
+++ b/src/components/FormationCard/style.scss
@@ -31,5 +31,17 @@
         z-index: 3;
         padding: 24px;
         border-radius: 22px 22px 0 0;
+
+        h3{
+            font-size: 16px;
+        }
+
+        h4{
+            font-size: 12px;
+        }
+
+        p{
+            margin-top: 16px;
+        }
     }
 }
