--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -3,10 +3,15 @@
 .header {
     background-color: transparent;
     height: 112px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
 
     .header-content {
         display: flex;
         align-items: center;
+        max-width: 1356px;
+        width: 100%;
         justify-content: space-between;
         height: 100%;
 
@@ -126,6 +131,7 @@
 
         .header-btn {
             margin: 0 36px;
+            z-index: 1;
 
             button {
                 background-color: unset;
