--- a/src/pages/Contact/style.scss
+++ b/src/pages/Contact/style.scss
@@ -16,6 +16,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        z-index: 1;
 
         .contact-title {
             font-size: 18px;
