--- a/src/pages/Contact/style.scss
+++ b/src/pages/Contact/style.scss
@@ -35,6 +35,10 @@
             flex-direction: column;
             width: 100%;
             padding: 32px 32px 0 32px;
+            
+            @media screen and (max-width: 612px) {
+                padding: 32px 0 0 0;
+            }
 
             .form-input {
                 display: flex;
